# OperatingSystem6sem3course

./: .gitignore  CMakeLists.txt  README.md
files/archivate/input/: 1 space in name.txt
files/archivate/input/fl1/fl2/: file
files/archivate/output/: file_out.md  out.txt
files/dearchivate/output/: file
files/dearchivate/output/fl1/: file2.txt
includes/: args.h  bgtask.h  errors.h  fgtask.h  file.h  filedir.h  includes.h  maintask.h  msg.h  signals.h  taskmanager.h  tasks.h  utils.h
src/: archivate.c  archivate.cpp  args.c  bgtask.c  clear.c  constants.h  errors.c  errors.h  fgtask.c  file.c  filedir.c  generator.c  image.c  image.h  includes.h  main.c  maintask.c  msg.c  reader.c  signals.c  strings.c  taskmanager.c  tasks.c  utils.c  utils.h  xorer.c
